--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-
+<header>
+<img src="Captura22.JPG" width="170" height="80">
+  </header>
 <div id="twitter" data-url="https://www.lawebera.es/como-hacer/ejemplos-html-xhml/anadir-imagenes-web.php" data-text="Como añadir imágenes a una página web" data-title="Tweet" class="sharrre"><a class="box" href="#"><div class="count" href="#">0</div><div class="share"><i class="fab fa-twitter"></i></div></a></div>
 <img src="twiter1.jpg" width="80" height="80">
