--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
   </header>
 <div id="twitter" data-url="file:///F:/programas/Git/mas/index.html" data-text="Como añadir imágenes a una página web" data-title="Tweet" class="sharrre"><a class="box" href="#"><div class="count" href="#">0</div><div class="share"><i class="fab fa-twitter"></i></div></a></div>
 <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
+<a class="twitter-timeline"
+  href="https://twitter.com/TwitterDev"
+  data-width="300"
+  data-height="300">
+Tweets by @TwitterDev
+</a>
