--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
   </header>
-<div id="twitter" data-url="file:///F:/programas/Git/mas/index.html" data-text="Como añadir imágenes a una página web" data-title="Tweet" class="sharrre"><a class="box" href="#"><div class="count" href="#">0</div><div class="share"><i class="fab fa-twitter"></i></div></a></div>
+
 <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
 <a class="twitter-timeline"
   href="https://twitter.com/grup662"
   data-width="300"
   data-height="300">
-Tweets by @grup662
+twitter by @grup662
 </a>
