--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-ENCABEZADO
+
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
+  <div>
+    <li><a href="http://www.twitter.com/falconmasters" target="_blank" class="icon-twitter"></a></li>
+    </div>
   </header>
 
 <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
