--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
   <div>
-    <li><a href="http://www.twitter.com/falconmasters" target="_blank" class="icon-twitter"></a></li>
+    <li><a href="http://www.twitter.com/falconmasters" target="_blank" class="twiter1.jpg"></a></li>
     </div>
   </header>
 
