--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
-  <div>
-    <li><a href="http://www.twitter.com/falconmasters" target="_blank" class="twiter1.jpg"></a></li>
-    </div>
+ <div class="social">
+		<ul>
+			<li><a href="http://www.facebook.com/falconmasters" target="_blank" class="icon-facebook"></a></li>
+			<li><a href="http://www.twitter.com/falconmasters" target="_blank" class="icon-twitter"></a></li>
+			<li><a href="http://www.googleplus.com/falconmasters" target="_blank" class="icon-googleplus"></a></li>
+			<li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="icon-pinterest"></a></li>
+			<li><a href="mailto:contacto@falconmasters.com" class="icon-mail"></a></li>
+		</ul>
+	</div>
   </header>
 
 <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
