--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <img src="Captura22.JPG" width="1350" height="150">
  <div class="social">
 		<ul>
-			<li><a href="http://www.facebook.com/falconmasters" target="_blank" class="icon-facebook"></a></li>
+			<li>
+				<a
+				   <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
+				   href="http://www.facebook.com/falconmasters" target="_blank" class="twitter-timeline">
+				<a class="twitter-timeline" href="https://twitter.com/grup662" data-width="300" data-height="300"> 
+					twitter by @grup662 
+				</a>
+				</a>
+			</li>
 			<li><a href="http://www.twitter.com/falconmasters" target="_blank" class="icon-twitter"></a></li>
 			<li><a href="http://www.googleplus.com/falconmasters" target="_blank" class="icon-googleplus"></a></li>
 			<li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="icon-pinterest"></a></li>
@@ -12,10 +20,5 @@
 	</div>
   </header>
 
-<img src="twiter1.jpg" width="80" height="80"  alt="twitter">
-<a class="twitter-timeline"
-  href="https://twitter.com/grup662"
-  data-width="300"
-  data-height="300">
-twitter by @grup662
-</a>
+
+
