--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 		<ul>
 			<li>
 				<a
-				   <img src="twiter1.jpg" width="80" height="80"  alt="twitter">
-				   href="http://www.facebook.com/falconmasters" target="_blank" class="twitter-timeline">
-				<a class="twitter-timeline" href="https://twitter.com/grup662" data-width="300" data-height="300"> 
-					twitter by @grup662 
+				   <img src="twiter1.jpg" width="80" height="80"  alt="twitter"target="_blank" class="twitter-timeline">
+				<a class="twitter-timeline" href="https://twitter.com/grup662" data-width="300" data-height="300" twitter by @grup662 >
 				</a>
 				</a>
 			</li>
