--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 			<li>
 				<a
 				   <img src="twiter1.jpg" width="80" height="80"  alt="twitter"target="_blank" class="twitter-timeline">
-				<a class="twitter-timeline" href="https://twitter.com/grup662" data-width="300" data-height="300" twitter by @grup662 >
+				 <class="twitter-timeline" href="https://twitter.com/grup662" data-width="300" data-height="300" twitter by @grup662 >
 				</a>
-				</a>
+				
 			</li>
-			<li><a href="http://www.twitter.com/falconmasters" target="_blank" class="icon-twitter"></a></li>
-			<li><a href="http://www.googleplus.com/falconmasters" target="_blank" class="icon-googleplus"></a></li>
-			<li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="icon-pinterest"></a></li>
-			<li><a href="mailto:contacto@falconmasters.com" class="icon-mail"></a></li>
+			
 		</ul>
 	</div>
   </header>
