--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
  <div class="social">
+	 <title>Modelado de Datos</title>
 		<ul>
 			<li>
 				<a
