--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <img src="Captura22.JPG" width="1350" height="150">
  <div class="social">
 	 <title>Modelado de Datos</title>
+	 <h1> Modelado de Datos
+	 </h1>
 		<ul>
 			<li>
 				<a
