--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
+
+ <title>Modelado de Datos</title>
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
  <div class="social">
-	 <title>Modelado de Datos</title>
-	 <h1> Modelado de Datos
+	 <h1> Modelado de Datos data-width="300" data-height="300"
 	 </h1>
 		<ul>
 			<li>
