--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <header>
 <img src="Captura22.JPG" width="1350" height="150">
  <div class="social">
-	 <h1> Modelado de Datos data-width="300" data-height="300"
-	 </h1>
+	
+		 
+		 <h1 align="right"> Modelado de Datos </h1>
+	 
 		<ul>
 			<li>
 				<a
