--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
  <title>Modelado de Datos</title>
 <header>
-  
+  <div
      <img src="Captura22.JPG" width="1350" height="150">
+	</div>
  <div class="social">
 	<h1 align="right"> Modelado de Datos </h1>
 		 
