--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <img src="Captura23.JPG" width="1350" height="150">
 	
  <div class="social">
-	<h1 align="right"> Modelado de Datos </h1>
+	<h1 align="left"> Inicio </h1>
 		 
 		
 	 
