--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <title>Modelado de Datos</title>
 <header>
   
-     <img src="Captura23.JPG" width="1350" height="150">
+     <img src="Imagenes/Captura23.JPG" width="1350" height="150">
 	
  <div class="social">
 	
