--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
 	</div>
   </header>
   <nav>
-			<ul class="menu">
-				<li class="activo"><a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a></li>
-				<div class="menu-header">
-					<li><a class="menu" target="contenido-iframe">Modelado de Datos</a></li>
-					<div class="contenido-submenu">
+    <ul class="menu">
+	<li class="activo">
+		<a onclick="redireccionar('./inicio.html');" 
+		   class="menu" target="contenido-iframe">Inicio
+		</a>
+	    </li>
+	 <div class="menu-header">
+	   <li>
+	     <a class="menu" target="contenido-iframe">
+	     Modelado de Datos</a>
+	  </li>
+          <div class="contenido-submenu">
 						<a href="#">Introducción al Modelado de Datos</a>
 						<a href="#">Modelo Entidad Relación</a>
 						<a href="#">Diagrama Entidad Relación</a>
-					</div>
-				</div>
+	 </div>
+      </div>
 				<li><a class="menu" target="contenido-iframe">Otros Recursos</a></li>
-        <li><a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a></li>      	
-			</ul>
-  </nav>
+       <li>
+	     <a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores
+	     </a>
+      </li>      	
+  </ul>
+</nav>
 
   <h1 align="left"> Inicio </h1>
 		 
