--- a/index.html
+++ b/index.html
@@ -11,21 +11,87 @@
 	 
 	</div>
   </header>
-  <nav>
-			<ul class="menu">
-				<li class="activo"><a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a></li>
-				<div class="menu-header">
-					<li><a class="menu" target="contenido-iframe">Modelado de Datos</a></li>
-					<div class="contenido-submenu">
-						<a href="#">Introducción al Modelado de Datos</a>
-						<a href="#">Modelo Entidad Relación</a>
-						<a href="#">Diagrama Entidad Relación</a>
-					</div>
-				</div>
-				<li><a class="menu" target="contenido-iframe">Otros Recursos</a></li>
-        <li><a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a></li>      	
-			</ul>
-		</nav>
+ <body>
+        <div class="container">
+
+            <ul id="nav">
+                <li><a href="#"><img src="images/home.png" /> Home</a></li>
+                <li><a href="#"><span><img src="images/top1.png" /> HTML/CSS</span></a>
+                    <div class="subs">
+                        <div class="col">
+                            <ul>
+                                <li><a href="#"><img src="images/bub.png" /> Link 1</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 2</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 3</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 4</a></li>
+                                <li><a href="#"><span><img src="images/top3.png" /> Sublinks</span></a>
+                                    <div class="subs">
+                                        <div class="col">
+                                            <ul>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 41</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 42</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 43</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 44</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 45</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col">
+                                            <ul>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 46</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 47</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 48</a></li>
+                                                <li><a href="#"><img src="images/bub.png" /> Link 49</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col">
+                            <ul>
+                                <li><a href="#"><img src="images/bub.png" /> Link 6</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 7</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 8</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 9</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 10</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li><a href="#"><span><img src="images/top2.png" /> jQuery/JS</span></a>
+                    <div class="subs">
+                        <div class="col">
+                            <ul>
+                                <li><a href="#"><img src="images/bub.png" /> Link 1</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 2</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 3</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 4</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 5</a></li>
+                            </ul>
+                        </div>
+                        <div class="col">
+                            <ul>
+                                <li><a href="#"><img src="images/bub.png" /> Link 6</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 7</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 8</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 9</a></li>
+                                <li><a href="#"><img src="images/bub.png" /> Link 10</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li><a href="#"><img src="images/top3.png" /> PHP</a></li>
+                <li><a href="#"><img src="images/top4.png" /> MySQL</a></li>
+                <li><a href="#"><img src="images/top5.png" /> XSLT</a></li>
+            </ul>
+
+        </div>
+
+        <footer>
+            <h2>CSS3 Metal menu with icons</h2>
+            <a href="http://www.script-tutorials.com/css3-metal-menu-with-icons" class="stuts">Back to original tutorial on <span>Script Tutorials</span></a>
+        </footer>
+    </body>
 
   <h1 align="left"> Inicio </h1>
 		 
