--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 	 
 	</div>
   </header>
- <body>
+ <!DOCTYPE html>
+<html lang="en" >
+    <head>
+        <meta charset="utf-8" />
+        <title>CSS3 Metal menu with icons | Script Tutorials</title>
+
+        <link rel="stylesheet" href="css/layout.css" type="text/css" media="screen">
+        <link rel="stylesheet" href="css/menu.css" type="text/css" media="screen">
+    </head>
+    <body>
         <div class="container">
 
             <ul id="nav">
@@ -92,6 +101,7 @@
             <a href="http://www.script-tutorials.com/css3-metal-menu-with-icons" class="stuts">Back to original tutorial on <span>Script Tutorials</span></a>
         </footer>
     </body>
+</html>
 
   <h1 align="left"> Inicio </h1>
 		 
