--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <footer>
             <h2>CSS3 Metal menu with icons</h2>
-            <a href="http://www.script-tutorials.com/css3-metal-menu-with-icons" class="stuts">Back to original tutorial on <span>Script Tutorials</span></a>
+            <a href="" class="stuts">unad universidad on <span>Script Tutorials</span></a>
         </footer>
     </body>
 </html>
