--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   </header>
  
 <html lang="en" >
-    <head>
-        <meta charset="utf-8" />
-        <title>CSS3 Metal menu with icons | Script Tutorials</title>
-
-     
-    </head>
+   <!-- navigation section-->       
+<div id="navigation" class="container">
+    <div><a href="#">home</a></div>
+    <div><a href="#">about</a></div>
+    <div><a href="#">services</a></div>
+    <div><a href="#">solutions</a></div>
+    <div><a href="#">contact</a></div>
+</div>
    
 
   <h1 align="left"> Inicio </h1>
