--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 	</div>
   </header>
  
-<html lang="en" >
-   <!-- navigation section-->       
-<div id="navigation" class="container">
-    <div><a href="#">home</a></div>
-    <div><a href="#">about</a></div>
-    <div><a href="#">services</a></div>
-    <div><a href="#">solutions</a></div>
-    <div><a href="#">contact</a></div>
-</div>
+<nav>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Categories</a></li>
+        <li><a href="">About</a></li>               
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
+</nav>
+
    
 
   <h1 align="left"> Inicio </h1>
