--- a/index.html
+++ b/index.html
@@ -14,37 +14,33 @@
  
 <body>
 
-    <script type="text/javascript">
-			function redireccionar (URL){ 
-				window.open(URL, target="contenido-iframe") 
-			};
-   	</script>
+    
 	<div id="contenedor">
-		<header>
-				<div class="divImagenLogo"><img class="imgLogo" src="imagenes/logoUNAD.png" alt="Universidad Abierta y a Distancia"></div>
-				<div class="divHeader">
-					<h1>
-							Modelo de Datos
-					</h1>		
-				</div>		
-		</header>
+		
 		<nav>
 			<ul class="menu">
 				<li class="activo"><a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a></li>
 				<div class="menu-header">
-					<li><a  class="menu" target="contenido-iframe">Modelado de Datos</a></li>
+					<li>
+						<a  class="menu" target="contenido-iframe">Modelado de Datos</a>
+					</li>
 					<div class="contenido-submenu">
 						<a href="#">Introducción al Modelado de Datos</a>
 						<a href="#">Modelo Entidad Relación</a>
 						<a href="#">Diagrama Entidad Relación</a>
 					</div>
 				</div>
-				<li><a  class="menu" target="contenido-iframe">Otros Recursos</a></li>
-        <li><a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a></li>      	
+				<li>
+					<a  class="menu" target="contenido-iframe">Otros Recursos</a>
+				</li>
+        <li>
+		<a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a>
+				</li>      	
 			</ul>
 		</nav>
 	
-    	<iframe width="1100px" height="550px" src="./inicio.html" name="contenido-iframe" frameborder="0" marginwidth="0" marginheight="0" border="0" scrolling="no"></iframe>
+    	<iframe width="1100px" height="550px" src="./inicio.html" name="contenido-iframe" frameborder="0" marginwidth="0" marginheight="0" border="0" scrolling="no">
+		</iframe>
   
   		<footer class="footContacto"></footer>
 	</div>
