--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			
    	</script>
 	<div id="contenedor">
-		
+		<header>				
+		</header>
 		<nav>
 			<ul class="menu">
 				<li class="activo"><a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a></li>
