--- a/index.html
+++ b/index.html
@@ -6,33 +6,38 @@
      <img src="Imagenes/Captura23.JPG" width="1350" height="150">
 	
  <div class="social">
-	
 	</div>
- 
   </header>
 <h1 align="left"> Inicio </h1>
 <html lang="es">
 <body>
 
-    <script type="text/javascript">
-			
+    <script type="text/javascript">	
    	</script>
 	<div id="contenedor">
 		<header>				
 		</header>
 		<nav>
 			<ul class="menu">
-				<li class="activo"><a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a></li>
+				<li class="activo">
+					<a onclick="redireccionar('./inicio.html');" class="menu" target="contenido-iframe">Inicio</a>
+				</li>
 				<div class="menu-header">
-					<li><a  class="menu" target="contenido-iframe">Modelado de Datos</a></li>
+					<li>
+						<a  class="menu" target="contenido-iframe">Modelado de Datos</a>
+					</li>
 					<div class="contenido-submenu">
 						<a href="#">Introducción al Modelado de Datos</a>
 						<a href="#">Modelo Entidad Relación</a>
 						<a href="#">Diagrama Entidad Relación</a>
 					</div>
 				</div>
-				<li><a  class="menu" target="contenido-iframe">Otros Recursos</a></li>
-        <li><a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a></li>      	
+				<li>
+					<a  class="menu" target="contenido-iframe">Otros Recursos</a>
+				</li>
+        <li>
+		<a onclick="redireccionar('./autores.html');" class="menu" target="contenido-iframe">Autores</a>
+	</li>      	
 			</ul>
 		</nav>
 	
